<resources>
    <string name="app_name">ChatBot</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Категории</string>
    <string name="title_notifications">Частые</string>
    <string name="news">Новости</string>
    <string name="i_is_admin">Я администратор</string>
    <string name="select_category">Выбрите категорию</string>
    <string name="often_questions">Часто задаваемые\nвопросы</string>
    <string name="your_question">Ваш вопрос</string>
    <string name="search_answer">Найти ответ</string>
    <string name="maybe_you_mean">Возможно, вы имели ввиду</string>
    <string name="in_chat">в чат</string>
    <string name="cancel">Отмена</string>
    <string name="answer_not_find">Ответ ненайден</string>
    <string name="not_find_description">На Ваш вопрос небыл найден ответ\nвы можете задать его администратору в чате</string>
    <string name="enter">Вход</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="sign_in">Войти как администратор</string>
    <string name="category">Категория</string>
    <string name="create">Создать</string>
    <string name="refactor">Сохранить</string>
    <string name="categories">Категории</string>
    <string name="questions">Вопросы</string>
    <string name="new_question">Новый\nвопрос</string>
    <string name="new_category">Новая\nкатегория</string>
    <string name="question">Вопрос</string>
</resources>