<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:context=".AdminLoginActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarMain"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/tool_bar"
            android:contentInsetStart="0dp"
            android:contentInsetLeft="0dp"
            android:elevation="4dp"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp">

            <ImageButton
                android:id="@+id/bt_back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="?attr/actionModeCloseDrawable"
                android:onClick="onClose"
                tools:ignore="OnClick"
                android:layout_margin="3dp"
                android:background="@drawable/round_corner_button"/>

        </androidx.appcompat.widget.Toolbar>
        <LinearLayout
            android:id="@+id/layout_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:background="@color/invisible">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/enter"
                android:textSize="48sp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20sp"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/et_email_in"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/login" />
                <TextView
                    android:id="@+id/tv_email_err_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:textColor="@color/design_default_color_error"/>
                <EditText
                    android:id="@+id/et_password_in"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
                <TextView
                    android:id="@+id/tv_password_err_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:textColor="@color/design_default_color_error" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">
                <View
                    android:layout_width="0dp"
                    android:layout_height="20dp"/>

                <Button
                    android:id="@+id/bt_sign_in_in"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@drawable/round_corner_button"
                    android:text="@string/sign_in"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</ScrollView>
